--- a/index.html
+++ b/index.html
@@ -55,10 +55,20 @@
                 <table id="tabela">
                     <thead>
                         <tr>
-                            
+                            <th>Mês</th>
+                            <th>Parcela (R$)</th>
+                            <th>Juros do mês (R$)</th>
+                            <th>Amortização (R$)</th>
+                            <th>Principal restante (R$)</th>
                         </tr>
                     </thead>
+                    <tbody></tbody>
                 </table>
             </section>
+        </main>
+
+
+        <script src="script.js"></script>
     </body>
+    
 </html>
